# flock

./: .env.example  .gitignore  README.md  SMOKE_TEST.md  index.html  package-lock.json  package.json  vitest.config.ts
.claude/: settings.json
.github/workflows/: pages.yml  release.yml
docs/landing/: README.md  index.html
docs/superpowers/plans/: 2026-05-23-swarm-checkin-viewer.md
docs/superpowers/specs/: 2026-05-23-swarm-checkin-viewer-design.md
src/: App.tsx  categories.ts  main.tsx  test-setup.ts  theme.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql
src-tauri/src/: db.rs  keychain.rs  lib.rs  main.rs  models.rs  stats.rs  swarm.rs
src-tauri/src/commands/: auth.rs  checkins.rs  mod.rs  prefs.rs  sync.rs  system.rs  user.rs
src/components/: AccountMenu.tsx  ConnectScreen.test.tsx  ConnectScreen.tsx  DetailCard.tsx  FilterBar.tsx  FilterChips.tsx  FilterPanel.test.tsx  FilterPanel.tsx  LoadingScreen.test.tsx  LoadingScreen.tsx  MapPanel.tsx  SettingsMenu.tsx  Shell.tsx  Sidebar.tsx  StatsPanel.test.tsx  StatsPanel.tsx  SyncErrorBanner.tsx  TimelinePanel.test.tsx  TimelinePanel.tsx  TimelineRow.tsx  Toolbar.test.tsx  Toolbar.tsx  TopBar.tsx  UpdateBanner.tsx
src/hooks/: useAppUpdater.ts  useDraggable.ts  useFilteredCheckins.test.ts  useFilteredCheckins.ts  useTauriEvents.ts
src/store/: index.test.ts  index.ts
src/types/: index.ts
